tests/ui/consts/promoted_const_call2.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/promoted_const_call2.rs:4:26
   |
LL |     let _: &'static _ = &id(&String::new());
   |            ----------    ^^^^^^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | };
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promoted_const_call2.rs:4:30
   |
LL |     let _: &'static _ = &id(&String::new());
   |            ----------        ^^^^^^^^^^^^^ - temporary value is freed at the end of this statement
   |            |                 |
   |            |                 creates a temporary value which is freed while still in use
   |            type annotation requires that borrow lasts for `'static`

error[E0493]: destructor of `String` cannot be evaluated at compile-time
  --> $DIR/promoted_const_call2.rs:4:30
   |
LL |     let _: &'static _ = &id(&String::new());
   |                              ^^^^^^^^^^^^^ the destructor for this type cannot be evaluated in constants

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promoted_const_call2.rs:11:26
   |
LL |     let _: &'static _ = &id(&String::new());
   |            ----------    ^^^^^^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promoted_const_call2.rs:11:30
   |
LL |     let _: &'static _ = &id(&String::new());
   |            ----------        ^^^^^^^^^^^^^ - temporary value is freed at the end of this statement
   |            |                 |
   |            |                 creates a temporary value which is freed while still in use
   |            type annotation requires that borrow lasts for `'static`

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0493, E0716.
For more information about an error, try `rustc --explain E0493`.
